# osgithub

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  README.md  justfile  main.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  setup.py
.github/workflows/: build_and_publish.yaml  main.yml  test.yml
osgithub/: github.py
osgithub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_github.py
