[project]
name = "osgithub"
version = "0.5.1"
description = "A thin wrapper around the GitHub API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "furl>=2.1.3",
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
]

[tool.coverage.run]
branch = true
omit = [".direnv/*", ".venv/*", "setup.py"]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.pytest.ini_options]
env = [
  "REQUESTS_CACHE_NAME=test_cache",
]
markers = [
    "integration: tests that call GitHub for real",
]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]
lint.extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
lint.extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
